--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "@trpc/react-query": "^11.6.0",
     "@trpc/server": "^11.6.0",
     "@types/multer": "^2.0.0",
-    "@types/qrcode": "^1.5.6",
     "axios": "^1.12.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -68,8 +67,10 @@
     "mysql2": "^3.15.0",
     "nanoid": "^5.1.5",
     "next-themes": "^0.4.6",
+    "otplib": "^13.2.1",
     "qrcode": "^1.5.4",
     "react": "^19.1.1",
+    "react-d3-tree": "^3.6.6",
     "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.1",
     "react-helmet-async": "^2.0.5",
@@ -94,6 +95,7 @@
     "@types/express": "4.17.21",
     "@types/google.maps": "^3.58.1",
     "@types/node": "^24.7.0",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
     "@types/web-push": "^3.6.4",
