--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/multer": "^2.0.0",
     "axios": "^1.12.0",
     "bcryptjs": "^3.0.3",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
