--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "express-rate-limit": "^8.2.1",
     "framer-motion": "^12.23.22",
     "input-otp": "^1.4.2",
+    "ioredis": "^5.9.2",
     "jose": "6.1.0",
     "lucide-react": "^0.453.0",
     "multer": "^2.0.2",
@@ -98,6 +99,7 @@
     "@types/bcryptjs": "^3.0.0",
     "@types/express": "4.17.21",
     "@types/google.maps": "^3.58.1",
+    "@types/ioredis": "^5.0.0",
     "@types/node": "^24.7.0",
     "@types/qrcode": "^1.5.6",
     "@types/react": "^19.1.16",
